--- a/memoir.html
+++ b/memoir.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="page-height">
 	<head>
 		<meta charset="utf-8">
 		<title>me-moi-R</title>
@@ -14,9 +14,13 @@
 		<link href="css/memoir.css" rel="stylesheet">
 		<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
  	</head>
- 	<body>
+ 	<body class="page-height">
 
-	 	<div class="container">
+		<!-- typography w bootstrap ..		 -->
+	 	<div class="container page-height">
+	 		<div class="row page-height">
+	 			<div class="col-md-12 page-height center-child-divs"><h1>TODAY</h1></div>
+	 		</div>
 	 	</div>
 
  	</body>
