--- a/memoir.html
+++ b/memoir.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="page-height">
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<title>me-moi-R</title>
@@ -14,12 +14,12 @@
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
 		<link href="css/memoir.css" rel="stylesheet">
  	</head>
- 	<body class="page-height">
+ 	<body>
 
 		<!-- typography w bootstrap ..		 -->
-	 	<div class="container page-height">
-	 		<div class="row page-height">
-	 			<div class="col-md-12 page-height center-child-divs">
+	 	<div class="container">
+	 		<div class="row">
+	 			<div class="col-md-8 center-child-divs raised-corner">
 	 				<h1 class="open-sans ginormous">TODAY</h1>
 	 			</div>
 	 		</div>
