--- a/memoir.html
+++ b/memoir.html
@@ -19,8 +19,9 @@
 		<!-- typography w bootstrap ..		 -->
 	 	<div class="container">
 	 		<div class="row">
-	 			<div class="col-md-8 center-child-divs raised-corner">
+	 			<div class="col-md-8 center-child-divs raised-corner pretty">
 	 				<h1 class="open-sans ginormous">TODAY</h1>
+	 				<!-- today: coding as representation; expression. mark otto and stylesheets / systems vs. one-offs; design-y approach to css (constraints, relationships, content should breathe, etc.). nicolas gallagher of normalize.css. -->
 	 			</div>
 	 		</div>
 	 	</div>
