we change our tools and then our tools change us

--- a/memoir.html
+++ b/memoir.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="page-height">
 	<head>
 		<meta charset="utf-8">
 		<title>me-moi-R</title>
@@ -14,16 +14,32 @@
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
 		<link href="css/memoir.css" rel="stylesheet">
  	</head>
- 	<body>
+ 	<body class="page-height">
 
 		<!-- typography w bootstrap ..		 -->
-	 	<div class="container">
+	 	<div class="container page-height">
 	 		<div class="row">
-	 			<div class="col-md-8 center-child-divs raised-corner pretty">
-	 				<h1 class="open-sans ginormous">TODAY</h1>
-	 				<!-- today: coding as representation; expression. mark otto and stylesheets / systems vs. one-offs; design-y approach to css (constraints, relationships, content should breathe, etc.). nicolas gallagher of normalize.css. -->
+	 			<div class="col-md-12 center-child-divs past-height">
+	 				<p class="open-sans-condensed background-quote-font">&laquo;WE SHAPE OUR TOOLS AND AFTERWARDS OUR TOOLS SHAPE US.&raquo; (M. McL.)</p>
 	 			</div>
 	 		</div>
+	 		<div class="row page-height">
+				<a href="http://www.w3.org/TR/html5/text-level-semantics.html#the-a-element">
+					<div class="col-md-12 center-child-divs raised-corner pretty page-height">
+						<h1 class="open-sans-condensed yellow-neon" style="overflow: visible;">TODAY</h1>	 				
+						<!-- today: coding as representation; expression. mark otto and stylesheets / systems vs. one-offs; design-y approach to css (constraints, relationships, content should breathe, etc.). nicolas gallagher of normalize.css. -->
+					</div>
+	 			</a>
+	 		</div>
+	 		<div class="row">
+				<div class="col-md-6 center-child-divs raised-corner pretty past-height">
+					<p class="open-sans-condensed past-font">NOVEMBER 2015</p>
+				</div>
+				<div class="col-md-6">
+
+				</div>
+	 		</div>
+
 	 	</div>
 
 		<script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
