so setting the width and height of a paragraph is one way to make it so that the text is all visible

--- a/memoir.html
+++ b/memoir.html
@@ -19,8 +19,8 @@
 		<!-- typography w bootstrap ..		 -->
 	 	<div class="container page-height">
 	 		<div class="row">
-	 			<div class="col-md-12 center-child-divs past-height">
-	 				<p class="open-sans-condensed background-quote-font">&laquo;WE SHAPE OUR TOOLS AND AFTERWARDS OUR TOOLS SHAPE US.&raquo; (M. McL.)</p>
+	 			<div class="col-md-12 center-child-divs past-height" style="overflow: visible;">
+	 				<p class="open-sans-condensed background-quote-font" style="width: 100%; height: 100%; margin-top: -600px;">&laquo;WE SHAPE OUR TOOLS AND AFTERWARDS OUR TOOLS SHAPE US.&raquo; (M. McL.)</p>
 	 			</div>
 	 		</div>
 	 		<div class="row page-height">
