took out setting the overflow property

--- a/memoir.html
+++ b/memoir.html
@@ -19,14 +19,14 @@
 		<!-- typography w bootstrap ..		 -->
 	 	<div class="container page-height">
 	 		<div class="row">
-	 			<div class="col-md-12 center-child-divs past-height" style="overflow: visible;">
+	 			<div class="col-md-12 center-child-divs past-height">
 	 				<p class="open-sans-condensed background-quote-font" style="width: 100%; height: 100%; margin-top: -600px;">&laquo;WE SHAPE OUR TOOLS AND AFTERWARDS OUR TOOLS SHAPE US.&raquo; (M. McL.)</p>
 	 			</div>
 	 		</div>
 	 		<div class="row page-height">
 				<a href="http://www.w3.org/TR/html5/text-level-semantics.html#the-a-element">
 					<div class="col-md-12 center-child-divs raised-corner pretty page-height">
-						<h1 class="open-sans-condensed yellow-neon" style="overflow: visible;">TODAY</h1>	 				
+						<h1 class="open-sans-condensed yellow-neon" style="width: 100%; height: 100%;">TODAY</h1>	 				
 						<!-- today: coding as representation; expression. mark otto and stylesheets / systems vs. one-offs; design-y approach to css (constraints, relationships, content should breathe, etc.). nicolas gallagher of normalize.css. -->
 					</div>
 	 			</a>
